--- a/views/admin.html
+++ b/views/admin.html
@@ -1,5 +1,6 @@
 <div class="admin-container">
   <div class="admin-content">
+    <a href="/role">Quản lý vai trò</a>
     <a class="create" href="/createAccount">Thêm tài khoản</a>
     <table>
      <tr>
@@ -26,5 +27,7 @@
       </tr>
       {{end}}
     </table>
+    <a href="/logout">Đăng xuất</a>
   </div>
+
 </div>
