--- a/views/createAccount.html
+++ b/views/createAccount.html
@@ -52,7 +52,7 @@
       // Lấy dữ liệu biểu mẫu
       var formData = $(this).serialize();
       $.ajax({
-        url: "/createAccount",
+        url: "/account",
         method: "POST",
         data: formData,
         // data: {
