--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
     <link rel="stylesheet" href="/scss/index.css" />
     <link rel="stylesheet" href="/scss/styles.css" />
     <link rel="stylesheet" href="/scss/information.css" />
