--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -12,6 +12,12 @@
     />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/2.1.6/css/dataTables.dataTables.css"
+    />
+    <script src="https://cdn.datatables.net/2.1.6/js/dataTables.js"></script>
+
     <link rel="stylesheet" href="/scss/index.css" />
     <link rel="stylesheet" href="/scss/styles.css" />
     <link rel="stylesheet" href="/scss/information.css" />
